# tuto_python

./: README.md  annotation_de_type.py  attribus_privés.py  calculs_mathématiques.py  classes_abstraites.py  différences_2x_3x.py  décorateurs.py  fonction_lambda.py  formatage_de_texte.py  instrospection.py  itérateurs.py  liste_en_comprehension.py  méthodes_spéciales.py  portée_des_variables.py  énumérations.py  événement_tkinter.py
base de données MYSQL/: base_de_donnees_my_SQL.py  data.sql
créer_un_executable/: game.py  main.py
distribuer_un_projet/: LICENSE  README.md  setup.cfg
distribuer_un_projet/main/: launch.py
distribuer_un_projet/other/: test.py
environnement virtuels/envtest/: pyvenv.cfg
gestionnaire de  contexte/: gestionnaire_de_contexte.py
opérateur_systémes/: opérateur_systémes.py
test_unitaire/: main.py
test_unitaire/src/: panda.py
test_unitaire_doctest/src/: panda.py
test_unitaire_doctest/tests/: testpanda.py
