[metadata]

name = MonProjetKali

version = 1.0.0

author = René Lataupe

author_email = tdes@gmail.com

description = Un projet inutile

long_descript = file:README.md

long_descript_content_type = text/markdown

license = LICENSE

project_url = 
    info https//
    bug tracker https

dowload_url = 

Classifiers = 
    Topic:: Software Development :: Libraries :: pygame 
    Natural Language :: French
    Operating Sytem :: Python :: OS Independent 
    Programming Language :: Python :: 3.9
[options]
package_dir = 
    = src

python_requires =>3.7
install_requires = 
    pygame